eks/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
     app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 545829658419.dkr.ecr.ap-south-1.amazonaws.com/simplebank:a4435abbb75a4220b8c9fa20b89767cb85b8460d
        ports:
        - containerPort: 8080
